Check if this project page works

--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -1,4 +1,4 @@
----
+<!-- ---
 layout: archive
 title: "Projects"
 permalink: /projects/
@@ -12,3 +12,62 @@ author_profile: true
   {% include archive-single.html %}
 {% endfor %}
 
+
+
+
+ -->
+
+---
+layout: archive
+title: "Projects"
+permalink: /projects/
+author_profile: true
+---
+
+{% include base_path %}
+
+{% assign sorted_projects = site.projects | sort: 'date' | reverse %}
+{% for project in sorted_projects %}
+  <div class="archive__item">
+    <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
+      <h2 class="archive__item-title" itemprop="headline">
+        <a href="{{ project.permalink | prepend: base_path }}" rel="permalink">{{ project.title }}</a>
+      </h2>
+      
+      {% if project.date %}
+        <p class="page__meta">
+          <i class="fa fa-fw fa-calendar" aria-hidden="true"></i> 
+          {{ project.date | date: "%B %Y" }}
+        </p>
+      {% endif %}
+
+      {% if project.venue %}
+        <p><i>{{ project.venue }}</i></p>
+      {% endif %}
+
+      {% if project.excerpt %}
+        <p class="archive__item-excerpt" itemprop="description">
+          {{ project.excerpt }}
+        </p>
+      {% endif %}
+
+      {% if project.header.teaser %}
+        <div class="archive__item-teaser" style="max-height: 300px;">
+          <img src=
+            {% if project.header.teaser contains "://" %}
+              "{{ project.header.teaser }}"
+            {% else %}
+              "{{ base_path }}/images/{{ project.header.teaser }}"
+            {% endif %}
+            alt="" style="max-height: 300px; width: 100%; object-fit: contain;">
+        </div>
+      {% endif %}
+
+      {% if project.citation %}
+        <p style="font-size: smaller">
+          <strong>Citation:</strong> {{ project.citation }}
+        </p>
+      {% endif %}
+    </article>
+  </div>
+{% endfor %} 
