Test Without base_path

--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -12,7 +12,7 @@ author_profile: true
   <div class="archive__item">
     <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
       <h2 class="archive__item-title" itemprop="headline">
-        <a href="{{ project.permalink | prepend: base_path }}" rel="permalink">{{ project.title }}</a>
+        <a href="{{ project.permalink }}" rel="permalink">{{ project.title }}</a>
       </h2>
       
       {% if project.date %}
