--- a/_pages/research.html
+++ b/_pages/research.html
@@ -35,3 +35,20 @@ Mentor: Professor Lawrence Angrave<br>
         <a href="/files/ResearchPoster.pdf" target="_blank">View Research Poster</a>
     </p>
 </p>
+
+<p><strong>University of Suwon, South Korea</strong><br>
+Research Assistant | Apr 2019 – Mar 2020<br>
+Mentor: Dr. Woo Rin Lee<br>
+    <ul>
+    <li>
+        Conducted research targeting the CD44/Beta-catenin pathway as a potential therapeutic strategy for gastric cancer patients.
+    </li>
+    <li>
+        Performed and analyzed experiments, including agarose electrophoresis, PCR, and cell maintenance, to evaluate the efficacy of the proposed strategy.
+    </li>
+    <li>
+        Published findings in the <i>Journal of Emerging Investigators (JEI)</i>, Harvard University. 
+        <a href="https://emerginginvestigators.org/articles/20-090" target="_blank">Read the publication</a>.
+    </li>
+    </ul>
+</p>
