--- a/_pages/research.html
+++ b/_pages/research.html
@@ -6,33 +6,37 @@ author_profile: true
 ---
 
 <p><strong>Siebel School of Computing and Data Science. University of Illinois Urbana-Champaign</strong><br>
-Undergraduate Research Scholar, Accessibility and AI Project | Sep 2024 – Present<br>
+Undergraduate Research Scholar, Accessibility and AI Project | Sep 2024 – May 2025 <br>
 Mentor: Professor Lawrence Angrave<br>
+<a href="https://github.com/sbaek21/Accessibility-AI-and-Video" target="_blank">Github Repository</a>
     <ul>
     <li>
-        Leading a research project to improve accessibility by converting lecture videos into book formats (PDFs), benefiting diverse learners and enhancing educational outcomes.
+        Led a research project to improve accessibility by converting lecture videos into book formats (PDFs), benefiting diverse learners and enhancing educational outcomes.
     </li>
     <li>
-        Implementing a Python-based pipeline to segment videos into chapters and extract representative images, producing well-structured book content.
+        Implemented a Python-based pipeline to segment videos into chapters and extract representative images, producing well-structured book content.
     </li>
     <li>
-        Developing AI-based solutions using open-source AI models (e.g., Ollama Vision, VGG-16) to address challenges such as slide transitions, animations, and annotations.
+        Developed AI-based solutions using open-source AI models (e.g., Ollama Vision, VGG-16) to address challenges such as slide transitions, animations, and annotations.
     </li>
     <li>
-        Transitioning beyond traditional methods like pixel-based analysis and SVM by integrating advanced AI tools to improve segmentation accuracy and efficiency.
+        Transitioned beyond traditional methods like pixel-based analysis and SVM by integrating advanced AI tools to improve segmentation accuracy and efficiency.
     </li>
     <li>
-        Designing accessible outputs optimized for usability and readability, adhering to universal design principles.
+        Designed accessible outputs optimized for usability and readability, adhering to universal design principles.
     </li>
     <li>
-        Exploring CNN models to detect significant scene changes and incorporating OCR for textual extraction from slides.
+        Explored CNN models to detect significant scene changes and incorporating OCR for textual extraction from slides.
     </li>
     <li>
-        Evaluating the quality and usability of generated book outputs through user feedback and iterative design improvements.
+        Evaluated the quality and usability of generated book outputs through user feedback and iterative design improvements.
+    </li>
+    <li>
+        Presented the project at the Undergraduate Researh Sympoisium (URS) at UIUC poster session under the title <i>"Enhancing Keyframe Extraction in Lecture Videos Using Optical Flow."</i>
     </li>
     </ul>
     <p>
-        <a href="/files/ResearchPoster.pdf" target="_blank">View Research Poster</a>
+        <a href="/files/Research_poster_URS.pdf" target="_blank">View Research Poster</a>
     </p>
 </p>
 
