--- a/_pages/research.html
+++ b/_pages/research.html
@@ -40,6 +40,39 @@ Mentor: Professor Lawrence Angrave<br>
     </p>
 </p>
 
+
+<p><strong>Siebel School of Computing and Data Science. University of Illinois Urbana-Champaign</strong><br>
+The Impact of LLM-Based Tools on User Engagement and the Quality of Q\&A Discussions on Tech Forums | Jan 2025 – May 2025 <br>
+Mentor: Professor Eshwar Chandrasekharan<br>
+<a href="https://github.com/sbaek21/llm-forum-qa-impact" target="_blank">Github Repository</a>
+    <ul>
+    <li>
+        Conducted a computational social science research project to investigate how the rise of Large Language Model (LLM)-generated content has influenced user behavior and perceived answer quality on Stack Overflow from 2022 to 2024.
+    </li>
+    <li>
+        Designed and implemented a scalable data pipeline using shell scripts and Python to extract, chunk, and preprocess 100,000+ Stack Overflow comments, ensuring balanced and representative samples from each year.
+    </li>
+    <li>
+        Engineered time-offset features for comments by grouping data by thread and calculating their delay from the first response, enabling a fine-grained analysis of comment timing and engagement.
+    </li>
+    <li>
+        Integrated GPT-detection scores through fuzzy matching techniques (using RapidFuzz), aligning LLM-generated comment predictions with high-scoring responses to study overlap between helpfulness and AI content.
+    </li>
+    <li>
+        Visualized trends between comment timing, score, and predicted LLM-use to determine whether users value early, human-written answers more than delayed or LLM-generated responses.
+    </li>
+    <li>
+        Presented research poster at Undergraduate Research Poster Session at UIUC.
+    </li>
+    </ul>
+    <p>
+        <a href="/files/CSS Poster.pdf" target="_blank">View Research Poster</a>
+    </p>
+    <p>
+        <a href="/files/Final_Project_Report.pdf" target="_blank">View Project Report</a>
+    </p>
+</p>
+
 <p><strong>University of Suwon, South Korea</strong><br>
 Research Assistant | Apr 2019 – Mar 2020<br>
 Mentor: Dr. Woo Rin Lee<br>
