Updated research links

--- a/_pages/research.html
+++ b/_pages/research.html
@@ -7,8 +7,13 @@ author_profile: true
 
 <p><strong>Siebel School of Computing and Data Science. University of Illinois Urbana-Champaign</strong><br>
 Undergraduate Research Scholar, Accessibility and AI Project | Sep 2024 – May 2025 <br>
-Mentor: Professor Lawrence Angrave<br>
-<a href="https://github.com/sbaek21/Accessibility-AI-and-Video" target="_blank">Github Repository</a>
+Mentor: Professor Lawrence Angrave</p>
+
+<p>
+    <a href="https://github.com/sbaek21/Accessibility-AI-and-Video" target="_blank">Github Repository</a>
+    <a href="/files/Research_poster_URS.pdf" target="_blank">View Research Poster</a>
+</p>
+
     <ul>
     <li>
         Led a research project to improve accessibility by converting lecture videos into book formats (PDFs), benefiting diverse learners and enhancing educational outcomes.
@@ -35,10 +40,9 @@ Mentor: Professor Lawrence Angrave<br>
         Presented the project at the Undergraduate Researh Sympoisium (URS) at UIUC poster session under the title <i>"Enhancing Keyframe Extraction in Lecture Videos Using Optical Flow."</i>
     </li>
     </ul>
-    <p>
-        <a href="/files/Research_poster_URS.pdf" target="_blank">View Research Poster</a>
-    </p>
-</p>
+<br> 
+    
+
 
 
 <p><strong>Siebel School of Computing and Data Science. University of Illinois Urbana-Champaign</strong><br>
