Updated Research links

--- a/_pages/research.html
+++ b/_pages/research.html
@@ -10,8 +10,8 @@ Undergraduate Research Scholar, Accessibility and AI Project | Sep 2024 – May 
 Mentor: Professor Lawrence Angrave</p>
 
 <p>
-    <a href="https://github.com/sbaek21/Accessibility-AI-and-Video" target="_blank">Github Repository</a>
-    <a href="/files/Research_poster_URS.pdf" target="_blank">View Research Poster</a>
+    <a href="https://github.com/sbaek21/Accessibility-AI-and-Video" target="_blank">🔗Github Repository</a> | 
+    <a href="/files/Research_poster_URS.pdf" target="_blank">📋View Research Poster</a>
 </p>
 
     <ul>
@@ -47,8 +47,14 @@ Mentor: Professor Lawrence Angrave</p>
 
 <p><strong>Siebel School of Computing and Data Science. University of Illinois Urbana-Champaign</strong><br>
 The Impact of LLM-Based Tools on User Engagement and the Quality of Q\&A Discussions on Tech Forums | Jan 2025 – May 2025 <br>
-Mentor: Professor Eshwar Chandrasekharan<br>
-<a href="https://github.com/sbaek21/llm-forum-qa-impact" target="_blank">Github Repository</a>
+Mentor: Professor Eshwar Chandrasekharan</p>
+
+<p>
+    <a href="https://github.com/sbaek21/llm-forum-qa-impact" target="_blank">🔗Github Repository</a> |
+    <a href="/files/CSS Poster.pdf" target="_blank">📋View Research Poster</a> |
+    <a href="/files/Final_Project_Report.pdf" target="_blank">📝View Project Report</a>
+</p>
+
     <ul>
     <li>
         Conducted a computational social science research project to investigate how the rise of Large Language Model (LLM)-generated content has influenced user behavior and perceived answer quality on Stack Overflow from 2022 to 2024.
@@ -69,13 +75,7 @@ Mentor: Professor Eshwar Chandrasekharan<br>
         Presented research poster at Undergraduate Research Poster Session at UIUC.
     </li>
     </ul>
-    <p>
-        <a href="/files/CSS Poster.pdf" target="_blank">View Research Poster</a>
-    </p>
-    <p>
-        <a href="/files/Final_Project_Report.pdf" target="_blank">View Project Report</a>
-    </p>
-</p>
+<br>
 
 <p><strong>University of Suwon, South Korea</strong><br>
 Research Assistant | Apr 2019 – Mar 2020<br>
